--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/html": "^2.2.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
